Issue 18 Alter navigation menu default hover and active states
The hover and active states does no look OK with a larger and expanded
navigation menu. Active state is also a little hard to see. This add
a solid bottom border to the active element.

--- a/scss/_overrides.scss
+++ b/scss/_overrides.scss
@@ -4,6 +4,9 @@ $normal:              "screen and (min-width: #{$screen-md-min})";
 $wide:                "screen and (min-width: #{$screen-lg-min})";
 $grid-breakpoint:     "screen and (min-width: #{$grid-float-breakpoint})";
 
+$navbar-default-link-hover-color: #2a1d75;
+$navbar-default-link-active-color: #2a1d75;
+
 // Drop shadows.
 @mixin box-shadow($shadow) {
   -webkit-box-shadow: $shadow;
