--- a/scss/style.scss
+++ b/scss/style.scss
@@ -32,3 +32,27 @@
 .more-link {
   text-align: right;
 }
+
+.navbar-default {
+  .navbar-nav {
+    > li > a {
+      color: $navbar-default-link-color;
+
+      &:hover,
+      &:focus {
+        color: $navbar-default-link-hover-color;
+        background-color: $navbar-default-link-hover-bg;
+      }
+    }
+    > .active > a {
+      &,
+      &:hover,
+      &:focus {
+        border-bottom: 2px solid $navbar-default-link-active-color;
+        margin-bottom: -2px;
+        color: $navbar-default-link-active-color;
+        background-color: transparent;
+      }
+    }
+  }
+}
